--- a/app/src/main/res/layout/activity_office.xml
+++ b/app/src/main/res/layout/activity_office.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OfficeActivity">
+    tools:context=".menu.OfficeActivity">
 
     <ListView
         android:id="@+id/listOffice"
