--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,37 +10,27 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="150dp"
         android:src="@drawable/logo_mdb"
         android:layout_marginTop="46dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="45dp"
-        android:layout_marginRight="10dp"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Form Login"
-            android:textColor="#000000"
-            android:textSize="32dp" />
-
-
-
-
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginTop="45dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:gravity="center"-->
+        <!--android:orientation="vertical">-->
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="#40ffffff">
+            android:background="#40ffffff"
+            android:layout_marginTop="45dp"
+            android:layout_gravity="center">
 
 
             <LinearLayout
@@ -49,7 +39,7 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="50dp"
-                    app:srcCompat="@drawable/user2" />
+                    app:srcCompat="@drawable/user" />
 
                 <EditText
                     android:id="@+id/edtUsername"
@@ -65,7 +55,7 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="50dp"
-                    app:srcCompat="@drawable/gembok2" />
+                    app:srcCompat="@drawable/gembok" />
 
                 <EditText
                     android:id="@+id/edtPassword"
@@ -97,7 +87,9 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="LOGIN"
-            android:layout_marginTop="10dp"/>
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            />
 
         <TextView
             android:layout_width="match_parent"
@@ -119,9 +111,13 @@
             android:textSize="15dp"
             android:layout_marginTop="2dp"
             android:textColor="#000000"/>
-
-        </LinearLayout>
-
-
+    
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Version 0.7.19"
+            android:gravity="bottom"
+            android:textColor="#313131"
+            android:paddingLeft="10dp"/>
 
 </LinearLayout>
