--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,8 @@
         <!--android:orientation="vertical">-->
 
         <LinearLayout
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
+            android:layout_margin="40dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="#40ffffff"
@@ -45,7 +46,7 @@
                     android:id="@+id/edtUsername"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Username"/>
+                    android:hint="  Username"/>
             </LinearLayout>
 
 
@@ -61,7 +62,7 @@
                     android:id="@+id/edtPassword"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Password"
+                    android:hint="  Password"
                     android:inputType="textPassword"/>
             </LinearLayout>
 
@@ -87,6 +88,9 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="LOGIN"
+            android:textColor="#ffffff"
+            android:background="#304FFE"
+            android:textStyle="bold"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
             />
