--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:src="@drawable/logo_mdb"
         android:layout_marginTop="46dp"/>
 
@@ -46,7 +46,7 @@
                     android:id="@+id/edtUsername"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="  Username"/>
+                    android:hint="Username"/>
             </LinearLayout>
 
 
@@ -62,7 +62,7 @@
                     android:id="@+id/edtPassword"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="  Password"
+                    android:hint="Password"
                     android:inputType="textPassword"/>
             </LinearLayout>
 
