--- a/app/src/main/res/layout/activity_detail_office.xml
+++ b/app/src/main/res/layout/activity_detail_office.xml
@@ -22,9 +22,15 @@
 
     <ImageView
         android:id="@+id/imgOffice"
-        android:layout_width="110dp"
-        android:layout_marginTop="15dp"
-        android:layout_height="120dp" />
+        android:layout_width="150dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="6dp" />
+    <TextView
+        android:id="@+id/tvDesckripsiOFF"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Deskripsi     : "
+        android:layout_marginTop="8dp"/>
 
 </LinearLayout>
 
@@ -40,8 +46,9 @@
                 android:id="@+id/tvNameOFF"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Name          : "
-                android:textStyle="bold" />
+                android:text="Nama              : "
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"/>
 
             <TextView
                 android:id="@+id/tvAddressOFF"
@@ -61,11 +68,7 @@
                 android:layout_height="wrap_content"
                 android:text="Email            : " />
 
-            <TextView
-                android:id="@+id/tvDesckripsiOFF"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Deskripsi     : " />
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
