--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
                     android:id="@+id/edtUsername"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:inputType="phone"
                     android:hint="Username"/>
             </LinearLayout>
 
@@ -63,7 +64,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Password"
-                    android:inputType="textPassword"/>
+                    android:inputType="numberPassword"/>
             </LinearLayout>
 
 
