--- a/app/src/main/res/layout/lv_employee.xml
+++ b/app/src/main/res/layout/lv_employee.xml
@@ -6,7 +6,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="15dp"
     android:id="@+id/cv">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -57,5 +60,20 @@
                 android:text="Gender"
                 android:textSize="12sp" />
         </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_gravity="center_vertical">
+
+            </LinearLayout>
+
+    </LinearLayout>
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_view"
+        android:layout_gravity="center"
+        android:id="@+id/imgbtn_view"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
