--- a/app/src/main/res/layout/lv_office.xml
+++ b/app/src/main/res/layout/lv_office.xml
@@ -1,54 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="15dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@null"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/img_office"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentTop="true"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_launcher_background"
-            android:padding="8dp"/>
-
+        android:orientation="vertical">
         <LinearLayout
-            android:id="@+id/linear_waiting_driver"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="8dp"
-            android:layout_toRightOf="@+id/img_employee"
-            android:padding="5dp">
+            android:background="@null"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/officeName"
+            <ImageView
+                android:id="@+id/img_office"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_launcher_background"
+                android:padding="8dp"/>
+
+            <LinearLayout
+                android:id="@+id/linear_waiting_driver"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Office Name"
-                android:textSize="12sp" />
+                android:orientation="vertical"
+                android:layout_marginTop="8dp"
+                android:layout_toRightOf="@+id/img_employee"
+                android:padding="5dp">
 
-            <TextView
-                android:id="@+id/addressOffice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Address Office"
-                android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/officeName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Office Name"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/phoneOffice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cell Phone"
-                android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/addressOffice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Address Office"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/phoneOffice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Cell Phone"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imgbtn"
+            android:background="@drawable/ic_view"
+            android:layout_gravity="center"/>
     </LinearLayout>
-</LinearLayout>
+</android.support.v7.widget.CardView>
