google maps api sdk, min belum ada deklarasi dari server masih manual coor

--- a/app/src/main/res/menu/optionmenu.xml
+++ b/app/src/main/res/menu/optionmenu.xml
@@ -9,7 +9,7 @@
 
     <item
         android:id="@+id/office"
-        android:title="Perusahaan"
+        android:title="Data Perusahaan"
         app:showAsAction="never" />
 
     <item
