--- a/app/src/main/res/layout/activity_detail_office.xml
+++ b/app/src/main/res/layout/activity_detail_office.xml
@@ -31,6 +31,11 @@
         android:layout_height="wrap_content"
         android:text="Deskripsi     : "
         android:layout_marginTop="28dp"/>
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.google.android.libraries.maps.SupportMapFragment" />
 
 </LinearLayout>
 
@@ -70,6 +75,7 @@
 
 
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 
 
