--- a/app/src/main/res/layout/lv_office.xml
+++ b/app/src/main/res/layout/lv_office.xml
@@ -60,6 +60,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imgbtn"
+            android:background="@drawable/maps_icon_gmm"
+            android:layout_gravity="center"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imgbtn1"
             android:background="@drawable/ic_view"
             android:layout_gravity="center"/>
     </LinearLayout>
